<resources>
    <string name="app_name">LoginForm</string>
    <string name="powt_rz_has_o">Powtórz hasło</string>
    <string name="podaj_has_o">Podaj hasło</string>
    <string name="podaj_e_mail">Podaj e-mail</string>
    <string name="zarwierd">Zarwierdź</string>
    <string name="witamy_w_aplikacji">Witamy w aplikacji</string>
    <string name="zalogowano_jako">Zalogowano jako:</string>
    <string name="wyloguj">Wyloguj</string>
</resources>