<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/witamy_w_aplikacji"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/emailDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zalogowano_jako"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="#000000"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wyloguj"
            android:padding="10dp"
            android:background="#5B5B5B"
            android:textColor="#FFFFFF"
            android:layout_gravity="center" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>